[project]
name = "auto_arima_chapkit"
version = "0.1.0"
description = "ML service for auto_arima_chapkit"
requires-python = ">=3.13"
dependencies = [
    "chapkit>=1.0.0",
    "pandas>=2.3.3",
    # Add your ML library here (e.g., "scikit-learn>=1.6.1", "tensorflow>=2.17.0")
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]